IDEX-3783 Refinement in Console panel UI

--- a/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/ui/style.css
+++ b/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/ui/style.css
@@ -305,7 +305,7 @@
 @eval delimeterColor org.eclipse.che.ide.api.theme.Style.getDelimeterColor();
 
 /*Events*/
-@eval outputFontColor org.eclipse.che.ide.api.theme.Style.getOutputFontColor();
+@eval outputFontColor org.eclipse.che.ide.api.theme.Style.theme.getOutputFontColor();
 @eval outputLinkColor org.eclipse.che.ide.api.theme.Style.getOutputLinkColor();
 
 /*Colors*/
