IDEX-3783 Refinement in Console panel UI

--- a/commons/che-core-commons-gwt/src/main/resources/org/eclipse/che/ide/ui/tree/Tree.css
+++ b/commons/che-core-commons-gwt/src/main/resources/org/eclipse/che/ide/ui/tree/Tree.css
@@ -115,7 +115,7 @@
 }
 
 .selectedInactive {
-    background-color: #132D41 ! important;
+    background-color: inactiveSelectionBackground ! important;
 }
 
 .isDropTarget {
