--- a/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/ui/style.css
+++ b/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/ui/style.css
@@ -74,6 +74,7 @@
 @eval hoverBackgroundColor org.eclipse.che.ide.api.theme.Style.theme.hoverBackgroundColor();
 
 @eval selectionBackground org.eclipse.che.ide.api.theme.Style.theme.selectionBackground();
+@eval inactiveSelectionBackground org.eclipse.che.ide.api.theme.Style.theme.inactiveSelectionBackground();
 @eval treeTextFileColor org.eclipse.che.ide.api.theme.Style.theme.treeTextFileColor();
 @eval treeTextFolderColor org.eclipse.che.ide.api.theme.Style.theme.treeTextFolderColor();
 @eval treeTextShadow org.eclipse.che.ide.api.theme.Style.theme.treeTextShadow();
