--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/notification/notification.css
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/notification/notification.css
@@ -274,38 +274,24 @@
 
 @-webkit-keyframes hiding {
     from {
-        -webkit-transform: perspective(400px);
-        transform: perspective(400px);
-    }
-
-    30% {
-        -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
-        transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
         opacity: 1;
     }
 
     to {
-        -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
-        transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
         opacity: 0;
+        -webkit-transform: translate3d(100%, 0, 0);
+        transform: translate3d(100%, 0, 0);
     }
 }
 
 @keyframes hiding {
     from {
-        -webkit-transform: perspective(400px);
-        transform: perspective(400px);
-    }
-
-    30% {
-        -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
-        transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
         opacity: 1;
     }
 
     to {
-        -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
-        transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
         opacity: 0;
+        -webkit-transform: translate3d(100%, 0, 0);
+        transform: translate3d(100%, 0, 0);
     }
 }
