Refine part stack tab items

--- a/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/parts/partstack.css
+++ b/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/parts/partstack.css
@@ -10,23 +10,14 @@
  *******************************************************************************/
 
 .ide-PartStack-Tab {
-    width: 80px;
-
-    height: 24px;
+    padding: 0 10px;
     cursor: default;
-    float: left;
-    line-height: 18px;
-
+    height: 25px;
+    display: inline-block;
+    white-space: nowrap;
+    margin-top: -1px;
+    overflow: hidden;
     color: tabTextColor;
-
-    font-size: 11px;
-
-    border-left: 1px solid tabsPanelBackground;
-    border-right: 1px solid tabsPanelBackground;
-
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
 
     -webkit-transition: color 0.1s ease-in-out,
                 fill 0.1s ease-in-out,
@@ -39,8 +30,8 @@
 .ide-PartStack-Tab svg {
     width: 14px;
     height: 14px;
-    margin-top: 5px;
-    margin-left: 1px;
+    display: block;
+    margin-right: 5px;
 }
 
 .ide-PartStack-Tab svg,
@@ -58,6 +49,8 @@
 
 .ide-PartStack-Tab:hover {
     color: hoveredTabTextColor;
+    background-color: hoveredTabBackground;
+    border-radius: 0;
 }
 
 .ide-PartStack-Tab:hover svg,
@@ -67,6 +60,7 @@
 }
 
 .leftTabs {
+    margin: -1px;
     transform: rotate(270deg);
     -webkit-transform: rotate(270deg);
     -moz-transform: rotate(270deg);
@@ -77,6 +71,7 @@
 }
 
 .rightTabs {
+    margin: -1px;
     transform: rotate(90deg);
     -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
@@ -87,14 +82,11 @@
 }
 
 .bottomTabs {
-    top: -1px;
 }
 
-.leftTabs,
-.rightTabs,
-.bottomTabs {
-    /* A little hack is needed to tune tab button border. */
-    border-radius: 5px;
+.selectedBottomTab:hover,
+.selectedRightOrLeftTab:hover {
+    background-color: activeTabBackground;
 }
 
 .selectedBottomTab,
@@ -102,11 +94,13 @@
     color: activeTabTextColor;
     text-shadow: activeTabTextShadow;
     background-color: activeTabBackground;
-    border-left: 1px solid activeTabBorderColor;
-    border-right: 1px solid activeTabBorderColor;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-shadow: 0 0 0 1px activeTabBorderColor inset;
 
     /* Unhack the panel */
-    border-radius: 0px;
+    border-radius: 0;
 }
 
 .selectedBottomTab svg,
@@ -121,13 +115,14 @@
 /* This style removes double border from left tab on the bottom panel. */
 .selectedBottomTab:first-child {
     border-left-color: transparent;
+    box-shadow: -1px 1px 0 0 activeTabBorderColor inset;
 }
 
 .listItemPanel {
     background-color: openedFilesDropdownListBackgroundColor;
     border: 1px solid openedFilesDropdownListBorderColor;
-    box-shadow: 0px 2px 2px 0px openedFilesDropdownListShadowColor;
-    border-radius: 0px 0px 3px 3px;
+    box-shadow: 0 2px 2px 0 openedFilesDropdownListShadowColor;
+    border-radius: 0 0 3px 3px;
 }
 
 .ide-PartStack-Content {
@@ -146,7 +141,7 @@
 
 .ide-Base-Part-Title-Label {
     display: inline-block;
-    line-height: 23px;
+    line-height: 21px;
     margin-left: 10px;
     vertical-align: middle;
     cursor: default;
@@ -166,7 +161,7 @@
 
 .ide-Base-Part-Toolbar-Bottom {
     background-color: partToolbar;
-    text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.5);
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
     color: mainFontColor;
     font-weight: bold;
     width: 100%;
@@ -183,50 +178,21 @@
 }
 
 .ide-Base-Part-Toolbar-Bottom-Icon {
-    fill: toolbarIconColor;
-    height: 16px;
-    width: 16px;
-    margin-top: 4px;
-}
-
-.ide-Base-Part-Toolbar-Bottom-Icon {
-    margin-right: 8px;
-    margin-left: 10px;
-    float: left;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .ide-Base-Part-Toolbar-Bottom-Button {
-    -moz-box-sizing: border-box !important;
-    box-sizing: border-box !important;
-
-    -webkit-user-select: none;
-    user-select: none;
-
-    float: left;
-
-    width: 22px;
-    height: 18px;
-    margin-top: 4px;
-    overflow: hidden;
-    position: relative;
-
-    border-radius: 2px;
+    display: inline-block;
+    font-size: 11px;
+    vertical-align: middle;
 }
 
 .ide-Base-Part-Toolbar-Bottom-Button-Right {
     margin-right: 5px;
     position: absolute;
     top: 1px;
-    right: 0px;
-}
-
-.ide-Base-Part-Toolbar-Bottom-Button > svg {
-    margin-left: 4px;
-    margin-top: 2px;
-    position: absolute;
-    width: 14px;
-    height: 14px;
-    fill: toolbarIconColor;
+    right: 0;
 }
 
 .ide-Base-Part-Toolbar-Center-Panel-Project-Title {
@@ -243,15 +209,9 @@
 }
 
 .ide-Base-Part-Toolbar-Bottom-Button:HOVER {
-    -webkit-box-shadow: 0px 0px 2px rgba(50, 50, 50, 1);
-    -moz-box-shadow: 0px 0px 2px rgba(50, 50, 50, 1);
-    box-shadow: 0px 0px 2px rgba(50, 50, 50, 1);
-}
-
-.ide-Base-Part-Toolbar-Bottom-Button:ACTIVE {
-    -webkit-transform: scale(0.9);
-    -moz-transform: scale(0.9);
-    transform: scale(0.9);
+    -webkit-box-shadow: 0 0 2px rgba(50, 50, 50, 1);
+    -moz-box-shadow: 0 0 2px rgba(50, 50, 50, 1);
+    box-shadow: 0 0 2px rgba(50, 50, 50, 1);
 }
 
 @sprite .ide-PartStack-Tab-Line-Error {
