--- a/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/parts/partstack.css
+++ b/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/parts/partstack.css
@@ -60,6 +60,7 @@
 }
 
 .leftTabs {
+    position: relative;
     margin: -1px;
     transform: rotate(270deg);
     -webkit-transform: rotate(270deg);
@@ -71,6 +72,7 @@
 }
 
 .rightTabs {
+    position: relative;
     margin: -1px;
     transform: rotate(90deg);
     -webkit-transform: rotate(90deg);
