--- a/ide/che-core-ide-jseditor/src/main/resources/org/eclipse/che/ide/jseditor/client/texteditor/Editor.css
+++ b/ide/che-core-ide-jseditor/src/main/resources/org/eclipse/che/ide/jseditor/client/texteditor/Editor.css
@@ -8,7 +8,7 @@
  * Contributors:
  *   Codenvy, S.A. - initial API and implementation
  *******************************************************************************/
-@external .annotation, .breakpoints;
+@external *;
 
 @sprite .lineWarning {
     gwt-image: "squiggleWarning";
