Fix border color for white theme in the HotKeysDialogViewImpl

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/hotkeys/HotKeysCss.css
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/hotkeys/HotKeysCss.css
@@ -28,7 +28,7 @@
 }
 
 .blackBorder > div {
-    border: 1px solid #121416;
+    border: 1px solid windowFooterBorderColor;
     font-family: "Open Sans", sans-serif;
 }
 
